--- a/src/Pages/HomePage/Header/Header.css
+++ b/src/Pages/HomePage/Header/Header.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500;600;700&family=Poppins:wght@300;400;500&family=Roboto:wght@300;400;500;700&family=Ubuntu:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
 .nav-bar {
     background: whitesmoke !important;
     /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
@@ -5,7 +14,49 @@
 
 .nav-text {
     color: black !important;
+    text-transform: uppercase;
+    /* padding-bottom: 3px; */
+    /* padding-right: 5px; */
+    /* padding-left: 3px; */
+    /* margin: 0 8px; */
+    text-decoration: none;
+    /* color: gray; */
+    letter-spacing: 1px;
+    font-weight: 500;
+    font-size: 14px;
+
 }
+
+
+
+#collasible-nav-dropdown::after {
+    color: black !important;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* .carousel-item {
