--- a/src/Pages/InventoryItem/InventoryItem.css
+++ b/src/Pages/InventoryItem/InventoryItem.css
@@ -1,14 +1,99 @@
-.button {
-    text-align: center;
-    width: 100%;
-    display: inline-block;
-    background: #3B3C36;
-    color: #fff;
-    font-size: 20px;
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,700);
+
+.snip1418 {
+    font-family: 'Raleway', Arial, sans-serif;
+    overflow: hidden;
+    margin: 10px;
+    background: #ffffff;
+    text-align: left;
+    color: #000000;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    font-size: 16px;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-perspective: 20em;
+    perspective: 20em;
+}
+
+.snip1418 * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+}
+
+.snip1418 img {
+    max-width: 100%;
+    vertical-align: top;
+    position: relative;
+}
+
+
+.snip1418 figcaption {
+    padding: 20px;
+}
+
+.snip1418 h3,
+.snip1418 p {
+    margin: 0;
+}
+
+.snip1418 h3 {
+    font-size: 1.5em;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
+.snip1418 p {
+    font-size: 0.9em;
+    letter-spacing: 1px;
+    font-weight: 400;
+}
+
+.snip1418 .price {
     font-weight: 500;
-    padding: 10px;
-    margin-top: 8px;
-    border: 2px solid #3B3C36;
-    transition: all 0.3s ease;
-    text-decoration: none;
+    font-size: 1.5em;
+    line-height: 48px;
+    letter-spacing: 1px;
+}
+
+.snip1418 .price s {
+    margin-right: 5px;
+    opacity: 0.5;
+    font-size: 0.9em;
+}
+
+.snip1418 a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.snip1418:hover {
+    opacity: 1;
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+}
+
+
+
+
+.update-button {
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    color: #333;
+    background: lightgray;
+    margin-bottom: 20px;
+    box-shadow: 0 3px 3px 0 #0000003b;
+}
+
+
+
+.update-button:hover {
+    background: #17445E;
+    color: white;
 }
