--- a/src/Pages/GetInTouch/GetInTouch.css
+++ b/src/Pages/GetInTouch/GetInTouch.css
@@ -12,8 +12,7 @@
 }
 
 .body,
-button,
-input {
+.btn-input {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     letter-spacing: 1.4px;
