--- a/src/Pages/HomePage/Banner/Banner.css
+++ b/src/Pages/HomePage/Banner/Banner.css
@@ -38,7 +38,7 @@ p {
 	margin-bottom: 30px;
 }
 
-button {
+.banner-btn {
 	border: none;
 	outline: none;
 	padding: 10px 20px;
@@ -49,6 +49,6 @@ button {
 	box-shadow: 0 3px 20px 0 #0000003b;
 }
 
-button:hover {
+.banner-btn:hover {
 	cursor: pointer;
 }
