--- a/src/Pages/NothingFound/NothingFound.modules.css
+++ b/src/Pages/NothingFound/NothingFound.modules.css
@@ -46,12 +46,12 @@
     width: 75%;
 }
 
-a {
+.link {
     text-decoration: none;
     color: white;
 }
 
-a:hover {
+.link:hover {
     text-decoration: underline;
 }
 
