--- a/src/Pages/HomePage/Banner/Banner.css
+++ b/src/Pages/HomePage/Banner/Banner.css
@@ -1,54 +1,81 @@
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+
+.banner-body {
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.7;
+	color: #eee;
 }
 
-header {
-	background: url('https://images.unsplash.com/photo-1580974928064-f0aeef70895a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGVsZWN0cm9uaWMlMjBzdG9yZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
-	text-align: center;
-	width: 100%;
-	height: auto;
+.header {
+	height: 100vh;
+	background-image:
+		linear-gradient(to right bottom,
+			rgba(82, 216, 253, 0.8),
+			rgba(64, 139, 243, 0.8)),
+		url('https://images.unsplash.com/photo-1580974928064-f0aeef70895a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGVsZWN0cm9uaWMlMjBzdG9yZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60');
+
 	background-size: cover;
-	background-attachment: fixed;
+	background-position: top;
 	position: relative;
-	overflow: hidden;
-	border-radius: 0 0 85% 85% / 30%;
+
+	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-header .overlay {
-	width: 100%;
-	height: 100%;
-	padding: 50px;
-	color: #FFF;
-	text-shadow: 1px 1px 1px #333;
-	background-image: linear-gradient(135deg, #9f05ff69 10%, #fd5e086b 100%);
 
+.text-box {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
 }
 
-h1 {
-	font-family: 'Dancing Script', cursive;
-	font-size: 80px;
+.heading-primary {
+	color: #fff;
+	text-transform: uppercase;
+
+	backface-visibility: hidden;
 	margin-bottom: 30px;
 }
 
-h3,
-p {
-	font-family: 'Open Sans', sans-serif;
-	margin-bottom: 30px;
+.heading-primary-main {
+	display: block;
+	font-size: 26px;
+	font-weight: 400;
+	letter-spacing: 5px;
 }
 
-.banner-btn {
-	border: none;
-	outline: none;
+.heading-primary-sub {
+	display: block;
+	font-size: 18px;
+	font-weight: 700;
+	letter-spacing: 7.4px;
+}
+
+.banner-btn:link,
+.banner-btn:visited {
+	text-transform: uppercase;
+	text-decoration: none;
 	padding: 10px 20px;
-	border-radius: 50px;
-	color: #333;
-	background: #fff;
-	margin-bottom: 50px;
-	box-shadow: 0 3px 20px 0 #0000003b;
+	display: inline-block;
+	border-radius: 100px;
+	transition: all .2s;
+	position: relative;
 }
 
 .banner-btn:hover {
-	cursor: pointer;
+	transform: translateY(-3px);
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.banner-btn:active {
+	transform: translateY(-1px);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.banner-btn-white {
+	background-color: #fff;
+	color: #777;
+	font-size: 14px;
 }
