--- a/src/Pages/Inventory/Inventory.css
+++ b/src/Pages/Inventory/Inventory.css
@@ -4,9 +4,101 @@
 }
 
 
+.arrow-icon {
+    width: 40px;
+    height: 30px;
+}
+
+.line-style h1 {
+    font-size: 26px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    width: 160px;
+    text-align: center;
+    margin: auto;
+    white-space: nowrap;
+    padding-bottom: 13px;
+}
+
+.line-style h1:before {
+    background-color: rgba(64, 139, 243, 0.8);
+    content: '';
+    display: block;
+    height: 3px;
+    width: 185px;
+    transform: translateX(-40px);
+
+}
+
+.line-style h1:after {
+    background-color: rgba(64, 139, 243, 0.8);
+    content: '';
+    display: block;
+
+    transform: translateX(80px);
+    height: 3px;
+    width: 185px;
+    margin-bottom: 0.25em;
+}
+
+
+/* manage button */
+.button-53 {
+    background-color: #3DD1E7;
+    border: 0 solid #E5E7EB;
+    box-sizing: border-box;
+    color: #000000 !important;
+    font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 700;
+    justify-content: center;
+    line-height: 1.75rem;
+    padding: .75rem 1.65rem;
+    text-align: center;
+    text-decoration: none #000000 solid;
+    text-decoration-thickness: auto;
+    width: 100%;
+    max-width: 460px;
+    position: relative;
+    cursor: pointer;
+    transform: rotate(-2deg);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-53:focus {
+    outline: 0;
+}
+
+.button-53:after {
+    content: '';
+    position: absolute;
+    border: 1px solid #000000;
+    bottom: 4px;
+    left: 4px;
+    width: calc(100% - 1px);
+    height: calc(100% - 1px);
+}
+
+.button-53:hover:after {
+    bottom: 2px;
+    left: 2px;
+}
+
+@media (min-width: 768px) {
+    .button-53 {
+        padding: .75rem 3rem;
+        font-size: 1.25rem;
+    }
+}
 
 
 
+
+
+/* responsive */
 @media only screen and (max-width: 576px) {
     .items-container {
         grid-template-columns: repeat(1, 1fr);
