--- a/src/Pages/CreativeTeam/CreativeTeam.module.css
+++ b/src/Pages/CreativeTeam/CreativeTeam.module.css
@@ -1,4 +1,4 @@
-.creative-body {
+/* .creative-body {
     margin-top: 20px;
     background: #eee;
 }
@@ -153,4 +153,4 @@
 .single_advisor_profile:hover .single_advisor_details_info p,
 .single_advisor_profile:focus .single_advisor_details_info p {
     color: #ffffff;
-}
+} */
