--- a/src/Pages/GetInTouch/GetInTouch.css
+++ b/src/Pages/GetInTouch/GetInTouch.css
@@ -7,7 +7,7 @@
 }
 
 .body {
-    background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
+    background: rgba(64, 139, 243, 0.8);
     font-size: 12px;
 }
 
@@ -112,7 +112,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    color: #ea1d6f;
+    color: rgba(64, 139, 243, 0.8);
     font-size: 26px;
 }
 
@@ -124,7 +124,7 @@
     bottom: -10px;
     width: 25px;
     height: 4px;
-    background: #ea1d6f;
+    background: rgba(64, 139, 243, 0.8);
 }
 
 .app-contact {
@@ -170,14 +170,14 @@
 .app-form-button {
     background: none;
     border: none;
-    color: #ea1d6f;
+    color: rgba(64, 139, 243, 0.8);
     font-size: 14px;
     cursor: pointer;
     outline: none;
 }
 
 .app-form-button:hover {
-    color: #b9134f;
+    color: rgba(82, 216, 253, 0.8);
 }
 
 .credits {
