--- a/src/Pages/ItemDetail/ItemDetail.css
+++ b/src/Pages/ItemDetail/ItemDetail.css
@@ -53,7 +53,7 @@ html {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    padding: 4px 4px 7px 4px;
+    padding: 4px 4px 5px 4px;
     outline: none;
     border: 1px solid #B0CFE0;
     -webkit-transition: all 0.30s ease-in-out;
@@ -71,8 +71,8 @@ html {
     -moz-box-shadow: inset 0px 1px 0px 0px #3985B1;
     -webkit-box-shadow: inset 0px 1px 0px 0px #3985B1;
     box-shadow: inset 0px 1px 0px 0px #3985B1;
-    background-color: #216288;
-    border: 1px solid #17445E;
+    background-color: #494848;
+    border: 1px solid #3e3e3e;
     display: inline-block;
     cursor: pointer;
     color: #FFFFFF;
@@ -82,8 +82,9 @@ html {
 }
 
 .restock-button:hover {
-    background: linear-gradient(to bottom, #2D77A2 5%, #337DA8 100%);
-    background-color: #28739E;
+    background: linear-gradient(to bottom, #273035 5%, #1b262c 100%);
+    background-color: #15191b;
+
 }
 
 
